# create-sample-dataset

./: .gitignore  README.md  generate_sales_data.py  pyproject.toml  requirements.txt
data/: dim_customers.csv  dim_products.csv  fact_sales.csv
sample_data/: __init__.py  dim_customers.csv  dim_products.csv  fact_sales.csv
src/: create_tables.py  generate_samples.py  main.py
