[tool.poetry]
name = "create-sample-dataset"
version = "0.1.0"
description = ""
authors = ["lamorasjr <lamorasjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^30.8.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
